--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -80,7 +80,7 @@
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
-% \beamertemplatenavigationsymbolsempty\
+\beamertemplatenavigationsymbolsempty
 
 \newcommand\MyBox[2]{
 	\fbox{\lower0.75cm
@@ -110,7 +110,7 @@
   % logo of my university
 	\titlegraphic{
 	% \includegraphics[width=1.5cm]{slides/250px-UBA.png}\hspace*{0.01cm}~%
-   			\includegraphics[width=1.3cm]{slides/250px-UBA.png}
+   			\includegraphics[scale=0.18]{slides/250px-UBA.png}
 	}
 
 %\setbeamertemplate{footline}[text line]{\bf \insertshortauthor \hfill \insertshorttitle \hfill \insertframenumber/29}
@@ -129,8 +129,8 @@
 \begin{document}
 
 
-\begin{frame}
-\titlepage\
+\begin{frame}[plain]
+\titlepage
 \end{frame}
 
 
@@ -171,7 +171,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Problemática del Chagas}
-			\includegraphics[scale=0.75]{slides/triatomine-map.jpg}
+			\includegraphics[scale=0.7]{slides/triatomine-map.jpg}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -303,7 +303,10 @@ Varios tipos de errores a minimizar en el aprendizaje con \textbf{finitos} datos
 
 	\end{block}
 
-	Un modelo se dice sobreajustado (``overfit'') cuando $\mid Err_{\testset}(\theta) - Err_{\trainset}(\theta)  \mid \ >> 0$
+	Un modelo se dice sobreajustado (``overfit'') cuando
+  \begin{equation*}
+  \mid Err_{\testset}(\theta) - Err_{\trainset}(\theta)  \mid \ >> 0
+  \end{equation*}
 
 	Para esto es importante controlar la \textbf{complejidad} del modelo
 
@@ -330,7 +333,7 @@ Bajo ciertas condiciones sobre $\Theta$ tenemos
 				\leq 2\sqrt{\dfrac{\log S(\Theta,n)+\log2}{n}}
 			\end{split}
 		\end{align*}
-		
+
 	\end{block}
 	donde $S(\Theta)$ es el coeficiente de ``shattering'' de la clase
 \end{frame}
@@ -345,7 +348,7 @@ Con $\sigma(z) = \frac{1}{1 + e^{-z}}$ y $logodds(X_i)$ como $\log \left(  \frac
 		\begin{align*}
 			P(C_1| X_i)  = \frac{1}{1 + \exp \left(- \log \left(  \frac{ P(X_i|C_1)p(C_1)}{P(X_i|C_0)p(C_0)} \right) \right)} = \sigma\left(logodds(X_i)\right)
 		\end{align*}
-	
+
 		El modelo supone
 		$$logodds(X_i) = \sum_{j=1}^p \theta^j \ X_i^j  \ , \forall X_i \in X $$
 		$$Y_i \mid X_i \ \sim \operatorname{Bernoulli}(p_i)$$
@@ -381,7 +384,7 @@ Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mat
 		$h_{\theta}(X_i) = \sum_{l=1}^L c_l I(X_i \in \mathcal{T}_l)$ \\
 		}
 	 	con $L$ el número de regiones. Aquí $\theta = \bigcup\limits_{l=1}^{L} (d_l,j_l)$
-	
+
 		\end{block}
 \end{frame}
 
@@ -401,10 +404,11 @@ Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mat
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[shrink=2]{Clasificadores de Ensamble }
+\begingroup
+\footnotesize%
+\begin{frame}{Clasificadores de Ensamble }
 
 %	Sea $\bigcup\limits_{m=1}^{M} \{ h_{\theta_m} \}$ un conjunto de pequeños arboles
-
 	\begin{block}{Bosques Aleatorios}
 		\begin{align*}
 			Y_i \approx f_{\theta}(X_i) = \dfrac{1}{M}\sum_{m=1}^M h_{\theta_m}(X_i)
@@ -431,6 +435,7 @@ Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mat
 
 
 \end{frame}
+\endgroup
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -491,6 +496,7 @@ Optimización de configuraciones de hiperparámetros $\mathcal{A}$ vía estimaci
 \begin{frame}{Métricas de clasificadores binarios}
 	\center\
 	Conteo de las combinaciones de $\hat{Y}$ y $Y$
+  \bigskip
 
 		\begin{columns}
 			\begin{column}{0.55 \textwidth}
@@ -499,7 +505,7 @@ Optimización de configuraciones de hiperparámetros $\mathcal{A}$ vía estimaci
 				\renewcommand\arraystretch{1}
 				\setlength\tabcolsep{0pt}
 				\begin{tabular}{c >{\bfseries}r @{\hspace{0.7em}}c @{\hspace{0.4em}}c @{\hspace{0.7em}}l}
-				\multirow{10}{*}{\parbox{1.1cm}{\bfseries\raggedleft\ Valor real $y$}} &
+				\multirow{14}{*}{\parbox{1.1cm}{\bfseries Valor real $y$}} &
 				& \multicolumn{2}{c}{\bfseries Valor predicho $\hat{y}$} & \\
 				& & \bfseries \^{P} \ $(0)$ & \bfseries \^{N} \ $(1)$  \\
 				& P \ $(0)$ & \MyBox{Verdadero}{Positivo (TP)} & \MyBox{Falso}{Negativo (FN)} & \\[2.4em]
@@ -530,12 +536,12 @@ Optimización de configuraciones de hiperparámetros $\mathcal{A}$ vía estimaci
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{ Descripción de los datos}
+\section{Descripción de los datos}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Visualización Social: El grafo de comunicaciones}
 		\center\
-		\includegraphics[scale=0.24]{slides/Graph-screenshot.jpg}
+		\includegraphics[scale=0.22]{slides/Graph-screenshot.jpg}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -751,28 +757,31 @@ Optimización de configuraciones de hiperparámetros $\mathcal{A}$ vía estimaci
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Ejemplo de atributos}
 Un ejemplo de dos atributos de $X$ procesados a partir del grafo de comunicaciones
-	\begin{table}[ht]
-		\small
-		\centering
-		\resizebox{\textwidth}{!}{
-			\begin{tabular} {|p{1.5cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{1cm}}
-			% \begin{tabular} {|p{1.5cm} p{1.5cm} p{2cm} p{1.5cm} p{2cm} p{1.5cm} p{1cm}}
-				%{l r r r r r r }
+  \begin{center}
+    \includegraphics[scale=0.65]{slides/tabla_atributos.pdf}
+  \end{center}
+	% \begin{table}[ht]
+		% \small
+		% \centering
+		% \resizebox{\textwidth}{!}{
+			% \begin{tabular} {|p{1.5cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{1cm}}
+			% % \begin{tabular} {|p{1.5cm} p{1.5cm} p{2cm} p{1.5cm} p{2cm} p{1.5cm} p{1cm}}
+				% %{l r r r r r r }
+				% % \toprule
 				% \toprule
-				\toprule
-				\textbf{Nombre del atributo} & \textbf{Q\_llamados / Tiempo} & \textbf{Momento} & \textbf{Dirección} &
-				\textbf{Vulnerabilidad} & \textbf{Mes} \\
+				% \textbf{Nombre del atributo} & \textbf{Q\_llamados / Tiempo} & \textbf{Momento} & \textbf{Dirección} &
+				% \textbf{Vulnerabilidad} & \textbf{Mes} \\
+				% % \midrule
 				% \midrule
-				\midrule
-				Llamados Fds EntrVul08    & Conteo & Final de Semana & Entrante & Interacciones vulnerables únicamente & Agosto\\
+				% Llamados Fds EntrVul08    & Conteo & Final de Semana & Entrante & Interacciones vulnerables únicamente & Agosto\\
+				% % \midrule
 				% \midrule
-				\midrule
-				Tiempo LuVierNoche Sal12 & Tiempo de duración (s) & Durante la semana fuera de horario laboral & Saliente & Sin filtro endémico   & Diciembre \\
-				% \hline
-				\bottomrule
-			\end{tabular}
-		}
-	\end{table}
+				% Tiempo LuVierNoche Sal12 & Tiempo de duración (s) & Durante la semana fuera de horario laboral & Saliente & Sin filtro endémico   & Diciembre \\
+				% % \hline
+				% \bottomrule
+			% \end{tabular}
+		% }
+	% \end{table}
 \end{frame}
 
 
@@ -781,7 +790,7 @@ Un ejemplo de dos atributos de $X$ procesados a partir del grafo de comunicacion
 \begin{frame}{ Proceso de experimentación }
 
 Dado $(X,Y)$ y un algoritmo $\left( f, \Theta \right)  $
-	\begin{enumerate}[I]
+	\begin{enumerate}[I.]
 		% \item a
 		% \item b
 		\item Preprocesar $X$ y separar en $\trainset$ + $\testset$
