Use circles instead of bullets for agenda

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -36,6 +36,7 @@
 %---------------------------------------------------------+
 % Paquetes misceláneos de listas, set space, notas, etc   |
 %---------------------------------------------------------+
+\useinnertheme{circles}
 \usepackage[shortlabels,inline]{enumitem}   % customiza liastas lists
 \setlist[itemize,1]{label=$\bullet$}
 \setlist[itemize,2]{label=\footnotesize{$\blacktriangleright$}}
