--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -399,7 +399,7 @@ Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mat
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Sobreajuste con }
+\begin{frame}{Sobreajuste con Árboles }
 \center\
 \includegraphics[width=1\textheight]{figure-biasVariance/dtree_overfit_problem_2.png}
 \end{frame}
