--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -764,31 +764,33 @@ Optimización de configuraciones de hiperparámetros $\mathcal{A}$ vía estimaci
 \begin{frame}{Ejemplo de atributos}
 Un ejemplo de dos atributos de $X$ procesados a partir del grafo de comunicaciones
   \begin{center}
-    \includegraphics[scale=0.65]{slides/tabla_atributos.pdf}
+    \includegraphics[scale=0.7]{slides/tabla_atributos.pdf}
   \end{center}
-	% \begin{table}[ht]
-		% \small
-		% \centering
-		% \resizebox{\textwidth}{!}{
-			% \begin{tabular} {|p{1.5cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{1cm}}
-			% % \begin{tabular} {|p{1.5cm} p{1.5cm} p{2cm} p{1.5cm} p{2cm} p{1.5cm} p{1cm}}
-				% %{l r r r r r r }
-				% % \toprule
-				% \toprule
-				% \textbf{Nombre del atributo} & \textbf{Q\_llamados / Tiempo} & \textbf{Momento} & \textbf{Dirección} &
-				% \textbf{Vulnerabilidad} & \textbf{Mes} \\
-				% % \midrule
-				% \midrule
-				% Llamados Fds EntrVul08    & Conteo & Final de Semana & Entrante & Interacciones vulnerables únicamente & Agosto\\
-				% % \midrule
-				% \midrule
-				% Tiempo LuVierNoche Sal12 & Tiempo de duración (s) & Durante la semana fuera de horario laboral & Saliente & Sin filtro endémico   & Diciembre \\
-				% % \hline
-				% \bottomrule
-			% \end{tabular}
-		% }
-	% \end{table}
 \end{frame}
+
+%% the previous pdf is based on the following table
+% \begin{table}[ht]
+% \small
+% \centering
+% \resizebox{\textwidth}{!}{
+% \begin{tabular} {|p{1.5cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{1cm}}
+% % \begin{tabular} {|p{1.5cm} p{1.5cm} p{2cm} p{1.5cm} p{2cm} p{1.5cm} p{1cm}}
+% %{l r r r r r r }
+% % \toprule
+% \toprule
+% \textbf{Nombre del atributo} & \textbf{Q\_llamados / Tiempo} & \textbf{Momento} & \textbf{Dirección} &
+% \textbf{Vulnerabilidad} & \textbf{Mes} \\
+% % \midrule
+% \midrule
+% Llamados Fds EntrVul08    & Conteo & Final de Semana & Entrante & Interacciones vulnerables únicamente & Agosto\\
+% % \midrule
+% \midrule
+% Tiempo LuVierNoche Sal12 & Tiempo de duración (s) & Durante la semana fuera de horario laboral & Saliente & Sin filtro endémico   & Diciembre \\
+% % \hline
+% \bottomrule
+% \end{tabular}
+% }
+% \end{table}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
