minor bullets and lists formatting

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -913,10 +913,10 @@ Dado $(X,Y)$ y un algoritmo $\left( f, \Theta \right)  $
 	\end{block}
 
 \begin{block}{Inconvenientes en la ``Regresión Logística''}
-	\begin{enumerate}[I]
+	\begin{itemize}[]
 		\item Lento: 110 min promedio frente a 1 min para ``Naive Bayes''
 		\item Hasta un $12\%$ peor que $GBT$
-	\end{enumerate}
+	\end{itemize}
 \end{block}
 
 \end{frame}
@@ -927,11 +927,12 @@ Dado $(X,Y)$ y un algoritmo $\left( f, \Theta \right)  $
 
 		Heurística para algoritmos de ensamble
 
-		\begin{itemize}
-			\item Interacciones en el mes de Diciembre o en Agosto
-			\item Interacciones vulnerables
-			\item Diámetro de Movilidad
-		\end{itemize}
+			\bigskip
+			Interacciones en el mes de Diciembre o en Agosto
+			\medskip
+			Interacciones vulnerables
+			\medskip
+			Diámetro de Movilidad
 
 \end{frame}
 
