comment out tevez igm

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -247,6 +247,12 @@
 	\end{block}
 \end{frame}
 
+
+%\begin{frame}[plain]
+%	\includegraphics[scale=0.7]{slides/tevez1.jpg}
+%\end{frame}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Clasificación Binaria Supervisada}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
