--- a/preamble.tex
+++ b/preamble.tex
@@ -194,8 +194,9 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 \hypersetup{colorlinks=true, allcolors=Navy, linktoc=page,
 pdfstartview={XYZ null null 1}, pdfcreator={Vim LaTeX},
 pdfsubject={Machine Learning},
-pdftitle={Math thesis},
+pdftitle={Tesis para la Carrera de Licenciatura en Matematica Aplicada},
 pdfauthor={Juan Mateo De Monasterio},
+pdfcreator={Juan Mateo De Monasterio},
 pdfkeywords={machine learning}
 }
 \usepackage[numbered,open,openlevel=1]{bookmark}
@@ -320,7 +321,10 @@ pdfkeywords={machine learning}
 
 \newcommand*{\titlepg}{%
   \begingroup
-    \vspace{0.01\textheight}
+  \begin{figure}[!htbp]
+  	\includegraphics[scale=0.5]{figures/uba_logo/250px-UBA.png}
+  \end{figure}
+%    \vspace{0.01\textheight}
     \begin{center}
       \textbf{\LARGE{Universidad de Buenos Aires}}\\
       \vspace{0.02\textheight}
@@ -338,9 +342,23 @@ pdfkeywords={machine learning}
       \vspace{\baselineskip}
       \rule{\textwidth}{1.5pt}\par
       \vfill
+      \textbf{\huge{Autor}}
+      \vfill
       \textsc{\huge{Juan Mateo De Monasterio}}
       \vfill
-      \textbf{\Large{\today}}
+      \textbf{\huge{Director }}
+      \vfill
+      \textsc{\huge{Carlos Sarraute}}
+      \vfill
+      \textbf{\huge{Co-director }}
+      \vfill
+      \textsc{\huge{Alejo Salles}}
+      \vfill
+      \textbf{\huge{Jurados}}
+      \vfill
+      \textsc{\huge{Matthieu Jonckheere, Pablo Groisman}}
+      \vfill
+      \textbf{\Large{Diciembre 22, 2017}}
     \end{center}
   \endgroup
   \thispagestyle{empty}\clearpage
