Improve titlepage style

--- a/preamble.tex
+++ b/preamble.tex
@@ -194,7 +194,7 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 \hypersetup{colorlinks=true, allcolors=Navy, linktoc=page,
 pdfstartview={XYZ null null 1}, pdfcreator={Vim LaTeX},
 pdfsubject={Machine Learning},
-pdftitle={Tesis para la Carrera de Licenciatura en Matematica Aplicada},
+pdftitle={Tesis para la Carrera de Licenciatura en Matemática Aplicada},
 pdfauthor={Juan Mateo De Monasterio},
 pdfcreator={Juan Mateo De Monasterio},
 pdfkeywords={machine learning}
@@ -321,47 +321,42 @@ pdfkeywords={machine learning}
 
 \newcommand*{\titlepg}{%
   \begingroup
-  \begin{figure}[!htbp]
-  	\includegraphics[scale=0.5]{figures/uba_logo/250px-UBA.png}
-  \end{figure}
-%    \vspace{0.01\textheight}
     \begin{center}
+        \begin{figure}[!htbp]
+          \includegraphics[scale=0.45]{figures/uba_logo/250px-UBA.png}
+        \end{figure}
+      \medskip
       \textbf{\LARGE{Universidad de Buenos Aires}}\\
-      \vspace{0.02\textheight}
-      \textbf{\Large{Facultad de Ciencias Exactas}}\\
-      \vspace{0.3\textheight}
+      \smallskip
+      \textbf{\Large{Facultad de Ciencias Exactas y Naturales}}\\
+      \smallskip
+      \textbf{\Large{Departamento de Matemática}}\\
+      \vspace{0.075\textheight}
+      %
       \rule{\textwidth}{1.5pt}\par
       \vspace{\baselineskip}
-
-% {\bfseries\Huge{Exploring Latinoamerican chagasic migrations with machine learning }\par
- {\bfseries\Huge{Exploring Migrations and Spread of Chagas Disease in Latin America with Machine Learning}\par
-
-% 	\bigskip\Large{Explorando migraciones chagásicas en latinoamérica con aprendizaje automático}}\\
- 	\bigskip\Large{Explorando migraciones y difusión del mal de Chagas en América Latina con aprendizaje automático}}\\
-
+      {\bfseries\huge{Exploring Migrations and Spread of Chagas Disease in Latin America with Machine Learning}\par
+      \bigskip\Large{---Explorando Migraciones y Difusión del Mal de Chagas en América
+          Latina con Aprendizaje Automático---}}\\
       \vspace{\baselineskip}
-      \rule{\textwidth}{1.5pt}\par
-      \vfill
-      \textbf{\huge{Autor}}
-      \vfill
-      \textsc{\huge{Juan Mateo De Monasterio}}
-      \vfill
-      \textbf{\huge{Director }}
-      \vfill
-      \textsc{\huge{Carlos Sarraute}}
-      \vfill
-      \textbf{\huge{Co-director }}
-      \vfill
-      \textsc{\huge{Alejo Salles}}
-      \vfill
-      \textbf{\huge{Jurados}}
-      \vfill
-      \textsc{\huge{Matthieu Jonckheere, Pablo Groisman}}
-      \vfill
-      \textbf{\Large{Diciembre 22, 2017}}
+      \rule{\textwidth}{1.5pt}
+      \bigskip
+
+      \textsc{\Large{Juan Mateo De Monasterio}}\par
+
+      \vspace{1.2cm}
+      \begin{flushleft}
+        \textbf{Director:} \textsc{Carlos Sarraute}\par
+        \textbf{Co-director:} \textsc{Alejo Salles}\par
+        \textbf{Jurados:} \textsc{Matthieu Jonckheere, Pablo Groisman}\par
+      \end{flushleft}
+      \bigskip
+      \begin{flushright}
+      \textbf{Diciembre 2017}
+      \end{flushright}
     \end{center}
-  \endgroup
   \thispagestyle{empty}\clearpage
+  \endgroup
 }
 
 \newcommand*{\copyrightpg}{%
